2006-06-05  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: YEEPEE!!! The bug plagging the gst0.10 port is GONE !!
	  Merge & cleanup from 0.8 branch:

	* soundconverter.py: Use filesrc instead of gnomevfssrc if it's absent.
	  (#7652) (debian #367253)
	* soundconverter: Added Spanish translation.
	* soundconverter: Added a custom file pattern choice. (thanks Adolfo)
	* soundconverter.py: Fix doubled folder (#7403).
	* soundconverter.py: Fix an uncatched InvalidURIError when adding files.
	* soundconverter.glade: Removed preferences and exit toolbar buttons
	  as requested (#6777).


2006-03-29  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: More gstreamer0.10 love. The new api is nice, but
	  porting to it sucks big time.

2006-03-19  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Files permissions are copied from source file.
	  Some more code for gstreamer0.10.

2006-02-06  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Progress dialog is working now.

2006-02-03  Gautier Portet <kassoulet gmail com>

	* soundconverter.glade: Corrected wrong signal called by the
	  addfolder menuitem.

2006-02-02  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Ouch, fixed broken converter pipeline.
	* soundconverter.glade: Fixed broken progressbar.

2006-02-01  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: We will now use gst_parse_launch() to create a
	  pipeline, since it allows us to be much more flexible. Some issues
	  with progressbar where fixed also.

2006-01-27  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Applied patch to remove stupid pygtk warning at
	  exit. thanks Hanno!

2006-01-24  Gautier Portet <kassoulet gmail com>

	* Makefile: Fixed build on Gentoo. And corrected a typo causing pl and
	  pt to be not installed
	* soundconverter.py|glade: Applied patch with new FileChooser.
	  thanks Regis!

2006-01-21  Gautier Portet <kassoulet gmail com>

	Release 0.8.3
	